--- a/index.qmd
+++ b/index.qmd
@@ -1,1 +1,2 @@
 # Introduction
+Major League Baseball, known as America's pastime, was founded in 1903 (though professional baseball dates back to 1869). One of baseball's distinguishing characteristics is its history of rich statistical analysis and recordkeeping. In fact, the application of statistical analysis to baseball has its own name: Sabermetrics. As statistical methodology and robustness of record-keeping has grown, so has the complexity under which players are evaluated. As a fan of baseball and the history of the sport, there have been times where I've noticed a dissonance between a player who seemed to perform the best and who actually won the award for a given year. I have wondered why the year-end voters made the decisions they did. What statistics were driving their selection criteria? Through exploratory analysis of player statistics and year-end awards (such as Most Valuable Player), I seek to understand how the definition of success in baseball has changed over time.
