--- a/data.qmd
+++ b/data.qmd
@@ -64,7 +64,7 @@ ggplot(missing_summary, aes(x = pct_missing, y = reorder(variable, pct_missing))
     x = "Percent Missing",
     y = "Variable"
   ) +
-  theme_minimal(base_size = 14) +
+  theme_minimal(base_size = 12) +
   theme(
     axis.text.y = element_text(size = 8)
   )
@@ -90,11 +90,11 @@ ggplot(pitching_missing_summary, aes(x = pct_missing, y = reorder(variable, pct_
     x = "Percent Missing",
     y = "Variable"
   ) +
-  theme_minimal(base_size = 14) +
+  theme_minimal(base_size = 12) +
   theme(
     axis.text.y = element_text(size = 8)
   )
 ```
-The missing value columns mirror each other, which is expected given the way which this dataset was compiled.
+Many of the missing value columns (outside of Statcast-related columns) mirror each other, which is expected given the way which this dataset was compiled.
 
 
