--- a/results.qmd
+++ b/results.qmd
@@ -1,7 +1,7 @@
 # Results
 When it comes to comprehensively evaluating a player's contributions, there is no statistic more referenced than wins above replacement (WAR). WAR uses a formula of several other statistics in an attempt to quantify a player's total contribution to their team. A baseline value of WAR is 0, which represents a "replacement level player". A replacement level player is a prototypical player who is easily acquirable and can be used to quickly replace other players. It is important to distinguish between a replacement level player and an average player. An average player in the MLB has a WAR above 0, coalescing around 2. WAR has been a mainstream statistic for a little over 10 years, and I am interested to see its impact on the awards voting over time.
 
-### WAR Impact Question:
+### WAR Impact Question
 Has the popularization of WAR impacted the frequency in which the player with the highest WAR wins Most Valuable player or Cy Young?
 
 
@@ -11,9 +11,11 @@ To note, there are two different calculations of WAR that are regularly referenc
 ```{r}
 library(ggplot2)
 library(dplyr)
+library(tidyr)
+library(scales)
 
 mvp_df <- read.csv('/Users/ryan/Desktop/STAT5702GR/final_project/mvp_hitting_dataset.csv')
-mvp_df_h <- mvp_df %>% 
+mvp_df_h <- mvp_df |> 
   filter(!is.na(AVG)) # Filtering out pitchers in the MVP dataset
 
 cy_df <- read.csv('/Users/ryan/Desktop/STAT5702GR/final_project/cy_young_pitching_dataset_rev.csv')
@@ -24,15 +26,13 @@ pitching_df <- read.csv('/Users/ryan/Desktop/STAT5702GR/final_project/pitching_d
 ```
 
 ```{r}
-glimpse(mvp_df_h)
+knitr::kable(head(mvp_df_h))
 ```
 
 ```{r fig.width=10, fig.height=8}
-library(dplyr)
-library(ggplot2)
 
 # Build AL plotting data, including period_label
-plot_df_AL <- mvp_df_h %>%
+plot_df_AL <- mvp_df_h |>
   mutate(
     year_num = as.integer(yearID),
 
@@ -43,7 +43,7 @@ plot_df_AL <- mvp_df_h %>%
 
     WAR.leader.flag = as.factor(WAR.leader.flag),
     year_f = factor(year_num)
-  ) %>%
+  ) |>
   filter(lgID == "AL")
 
 # Custom colors
@@ -73,7 +73,7 @@ ggplot(plot_df_AL, aes(x = WAR, y = year_f, fill = WAR.leader.flag)) +
 
 
 ```{r fig.width=10, fig.height=8}
-plot_df_NL <- mvp_df_h %>%
+plot_df_NL <- mvp_df_h |>
   mutate(
     year_num = as.integer(yearID),
     period_start = floor((year_num - 1911) / 20) * 20 + 1911,
@@ -81,7 +81,7 @@ plot_df_NL <- mvp_df_h %>%
     period_label = paste0(period_start, "–", period_end),
     WAR.leader.flag = as.factor(WAR.leader.flag),
     year_f = factor(year_num)
-  ) %>%
+  ) |>
   filter(lgID == "NL")
 
 ggplot(plot_df_NL, aes(x = WAR, y = year_f, fill = WAR.leader.flag)) +
@@ -111,9 +111,8 @@ ggplot(plot_df_NL, aes(x = WAR, y = year_f, fill = WAR.leader.flag)) +
 The graphs show that the prediction power of WAR on MVP winning grew significantly in the late-2000s. From that point on, the MVP is the WAR leader for a majority of the years. To note, I have seen a similar published online, although I am not able to locate it at the moment. However, I believe that the year range was much more limited for that graph, perhaps 2000-2017.
 
 ```{r}
-library(dplyr)
 
-mvp_decade <- mvp_df_h %>%
+mvp_decade <- mvp_df_h |>
   mutate(
     decade_start = floor(yearID / 10) * 10,
     decade_label = paste0(decade_start, "s"),
@@ -121,21 +120,20 @@ mvp_decade <- mvp_df_h %>%
       is.logical(WAR.leader.flag) ~ WAR.leader.flag,
       TRUE ~ WAR.leader.flag %in% c(1, "1")
     )
-  ) %>%
-  group_by(decade_start, decade_label) %>%
+  ) |>
+  group_by(decade_start, decade_label) |>
   summarise(
     mvp_war_leaders = sum(war_leader, na.rm = TRUE),
     total_mvps = n(),
     pct_war_leader = mvp_war_leaders / total_mvps,
     .groups = "drop"
-  ) %>%
+  ) |>
   arrange(decade_start)
 
-head(mvp_decade, 5)
+knitr::kable(head(mvp_decade))
 ```
 
 ```{r}
-library(ggplot2)
 
 ggplot(mvp_decade, aes(x = factor(decade_label, levels = decade_label),
                        y = pct_war_leader)) +
@@ -146,21 +144,19 @@ ggplot(mvp_decade, aes(x = factor(decade_label, levels = decade_label),
     x = "Decade",
     y = "Percentage"
   ) +
-  theme_minimal(base_size = 14)
+  theme_minimal(base_size = 10)
 
 ```
 This graph counts MVPs who also led their league in WAR and aggregates by decade. The 2010s and 2020s are the two decades with the highest percentages of MVPs who also led the league in WAR.
 
 ```{r}
-glimpse(cy_df)
+knitr::kable(head(cy_df))
 ```
 
 
 ```{r fig.width=10, fig.height=8}
-library(dplyr)
-library(ggplot2)
 
-plot_df_AL_cy <- cy_df %>%
+plot_df_AL_cy <- cy_df |>
   mutate(
     year_num = as.integer(yearID),
 
@@ -171,7 +167,7 @@ plot_df_AL_cy <- cy_df %>%
 
     WAR.leader.flag = as.factor(WAR.leader.flag),
     year_f = factor(year_num)
-  ) %>%
+  ) |>
   filter(lgID == "AL")
 
 highlight_colors <- c("0" = "gray70", "1" = "#1f78b4")
@@ -199,9 +195,8 @@ ggplot(plot_df_AL_cy, aes(x = WAR, y = year_f, fill = WAR.leader.flag)) +
 ```
 
 ```{r}
-library(dplyr)
 
-cy_decade <- cy_df %>%
+cy_decade <- cy_df |>
   mutate(
     decade_start = floor(yearID / 10) * 10,
     decade_label = paste0(decade_start, "s"),
@@ -209,21 +204,20 @@ cy_decade <- cy_df %>%
       is.logical(WAR.leader.flag) ~ WAR.leader.flag,
       TRUE ~ WAR.leader.flag %in% c(1, "1")
     )
-  ) %>%
-  group_by(decade_start, decade_label) %>%
+  ) |>
+  group_by(decade_start, decade_label) |>
   summarise(
     cy_war_leaders  = sum(war_leader, na.rm = TRUE),
     total_cy_awards = n(),
     pct_war_leader  = cy_war_leaders / total_cy_awards,
     .groups = "drop"
-  ) %>%
+  ) |>
   arrange(decade_start)
 
-head(cy_decade, 5)
+knitr::kable(head(cy_decade))
 ```
 
 ```{r}
-library(ggplot2)
 
 ggplot(cy_decade,
        aes(x = factor(decade_label, levels = decade_label),
@@ -235,7 +229,7 @@ ggplot(cy_decade,
     x = "Decade",
     y = "Percentage"
   ) +
-  theme_minimal(base_size = 14)
+  theme_minimal(base_size = 10)
 
 ```
 When it comes to Cy Young, there does not seem to be a pronounced shift towards WAR leaders in recent decades. The 1990s and 2000s had a higher proportion of WAR-leading Cy Young winners than the 2010s and 2020s. While there are always star players, there were some all-time elite pitchers who were at their peaks during the late 1990s and early 2000s. Randy Johnson, Pedro Martinez, and Roger Clemens combined for 14 Cy Young awards between 1995 and 2004. These singular talents may have accumulated a relatively outsized WAR for a given season, which could be why the 1990s and 2000s have the highest proportion of WAR-leading Cy Young award winners.
@@ -250,9 +244,7 @@ Which individual statistics are drivers of the MVP and Cy Young award, and how h
 
 ```{r}
 
-library(dplyr)
-
-hitting_era_df <- hitting_df %>%
+hitting_era_df <- hitting_df |>
   mutate(
     decade_start = floor(yearID / 20) * 20,
     decade_label = paste0(decade_start, "s"),
@@ -266,18 +258,16 @@ hitting_era_df <- hitting_df %>%
 
 
 ```{r fig.width=12, fig.height=8}
-library(dplyr)
-library(ggplot2)
 
 # Build era + MVP flag dataset (if you haven't already)
-hitting_era_df <- hitting_df %>%
+hitting_era_df <- hitting_df |>
   mutate(
     decade_start = floor(yearID / 20) * 20,
     decade_label = paste0(decade_start, "s"),
     MVP_flag = ifelse(awardID == "Most Valuable Player",
                       "MVP Winner",
                       "Non-MVP")
-  ) %>%
+  ) |>
   filter(!is.na(SLG.))   # drop rows without SLG_plus
 
 ggplot(hitting_era_df,
@@ -302,11 +292,9 @@ ggplot(hitting_era_df,
   )
 
 ```
-This visualization attempts to show the density curves of Slugging Percentage+ for MVP winners vs non-MVP winners. Slugging Percentage attempts to measure a hitter's power (i.e., the ability to get extra-base hits such as home runs and doubles). The "+" represents a normalization to 100 to represent the average for a given year, with adjustments for ballpark and for the league. As an example, a player with a Slugging Percentage+ of 125 has a 25% better slugging percentage than league-average for a given year. This is a powerful way to compare power relative to the rest of the league over time. The graph shows that through the 1930s, MVP winners often had a wide range of slugging percentage. This means that hitters who did not hit for power had a meaningful chance of winning MVP. Over time, the slugging percentage distributions for MVP winners narrowed while the rest of the league stayed fairly static, although this is expected for a stat that normalizes for historical average. By the 1980s, the distribution shows that it was unlikely that a player with a slugging percentage+ below 110 would be able to win MVP. By the 2020s, the distribution of MVP winners has shifted even more, with that boundary nearing 130. This graph shows that power has become a very important statistic for MVP consideration. Hitters like Aaron Judge and Shohei Ohtani come to mind, who have won multiple MVPs each for their impressive show of power.
+This visualization attempts to show the density curves of Slugging Percentage+ for MVP winners vs non-MVP winners. Slugging Percentage attempts to measure a hitter's power (i.e., the ability to get extra-base hits such as home runs and doubles). The "+" represents a normalization to 100 to represent the average for a given year, with adjustments for ballpark and for the league. As an example, a player with a slugging percentage+ of 125 has a 25% better slugging percentage than league-average for a given year. This is a powerful way to compare power relative to the rest of the league over time. The graph shows that through the 1930s, MVP winners often had a wide range of slugging percentage. This means that hitters who did not hit for power had a meaningful chance of winning MVP. Over time, the slugging percentage distributions for MVP winners narrowed while the rest of the league stayed fairly static, although this is expected for a stat that normalizes for historical average. By the 1980s, the distribution shows that it was unlikely that a player with a slugging percentage+ below 110 would be able to win MVP. By the 2020s, the distribution of MVP winners has shifted even more, with that boundary nearing 130. This graph shows that power has become a very important statistic for MVP consideration. Hitters like Aaron Judge and Shohei Ohtani come to mind, who have recently won multiple MVPs each for their impressive show of power.
 
 ```{r}
-library(dplyr)
-library(tidyr)
 
 # Stats you want to evaluate
 candidate_stats <- c("WAR", "AVG.", "SLG.", "wRC.", "ISO.")
@@ -315,41 +303,41 @@ stats_avail <- intersect(candidate_stats, names(hitting_df))
 # Force period bins to start at 1900
 period_base <- 1900
 
-ranked <- hitting_df %>%
+ranked <- hitting_df |>
   mutate(
     year_num = as.integer(yearID),
 
     # FORCE 20-year bins starting at 1900
     period_start = floor((year_num - period_base) / 20) * 20 + period_base,
     period_end   = period_start + 19L,
-    period_label = paste0(period_start, "–", period_end),
+    period_label = paste0(period_start, 's'),
 
     # Rank players within league-year for each stat
     # earlier code unchanged
-  ) %>%
-  group_by(yearID, lgID) %>%
+  ) |>
+  group_by(yearID, lgID) |>
   mutate(
     across(
       all_of(stats_avail),
       ~ min_rank(desc(.x)),
       .names = "rank_{.col}"
     )
-  ) %>%
+  ) |>
   ungroup()
 
 ```
 
 ```{r}
-mvp_ranked <- ranked %>%
+mvp_ranked <- ranked |>
   filter(awardID == "Most Valuable Player")
 
-mvp_long <- mvp_ranked %>%
-  select(yearID, lgID, period_label, starts_with("rank_")) %>%
+mvp_long <- mvp_ranked |>
+  select(yearID, lgID, period_label, starts_with("rank_")) |>
   pivot_longer(
     cols = starts_with("rank_"),
     names_to = "stat",
     values_to = "rank"
-  ) %>%
+  ) |>
   mutate(
     stat = sub("^rank_", "", stat),
     rank_bin = case_when(
@@ -363,22 +351,20 @@ mvp_long <- mvp_ranked %>%
 ```
 
 ```{r}
-mvp_heat_period <- mvp_long %>%
-  group_by(period_label, stat, rank_bin) %>%
-  summarise(n = n(), .groups = "drop") %>%
-  group_by(period_label, stat) %>%
+mvp_heat_period <- mvp_long |>
+  group_by(period_label, stat, rank_bin) |>
+  summarise(n = n(), .groups = "drop") |>
+  group_by(period_label, stat) |>
   mutate(
     total_mvp = sum(n),
     pct = n / total_mvp
-  ) %>%
-  ungroup() %>%
+  ) |>
+  ungroup() |>
   mutate(stat = factor(stat, levels = stats_avail))
 
 ```
 
 ```{r fig.width=12, fig.height=8}
-library(ggplot2)
-library(scales)
 
 ggplot(mvp_heat_period,
        aes(x = stat, y = rank_bin, fill = pct)) +
@@ -393,7 +379,7 @@ ggplot(mvp_heat_period,
     title = "MVP Leaderboard Performance Across Baseball Eras",
     subtitle = "20-year bins starting at 1900",
     x = "Statistic",
-    y = "Ranking Bin"
+    y = "Statistic Ranking Bin"
   ) +
   facet_wrap(~ period_label, ncol = 2) +
   theme_minimal(base_size = 14) +
@@ -404,17 +390,15 @@ ggplot(mvp_heat_period,
   )
 
 ```
-Overall, the earlier decades seem to be colored more homogenously than recent decades. This may mean that a heaview emphasis is places on these sets of statistics.
+This graph shows how often an MVP winner is first, top 3, top 5, or outside of the top 5 for the leadership of a given statistic across the league. Overall, the earlier decades seem to be colored more homogeneously than recent decades. This may indicate lower importance of these statistics as it pertains to voting. The placement of these statistics on v seem to diverge or polarize in more recent decades. It could be beneficial to experiment with this visualization for additional variables.
+
+I selected these specific statistics because I feel that they reflect the current values of the league front offices in some respects.
 
 ```{r fig.width=12, fig.height=8}
 
-library(dplyr)
-library(ggplot2)
-library(scales)
-
-pitching_cy <- pitching_df %>%
+pitching_cy <- pitching_df |>
   # Cy Young era only
-  filter(yearID >= 1956) %>%
+  filter(yearID >= 1956) |>
   mutate(
     # Award status: Cy Young winner vs everyone else
     award_flag = ifelse(awardID == "Cy Young Award",
@@ -425,7 +409,7 @@ pitching_cy <- pitching_df %>%
     # Decade labels: 1950s, 1960s, 1970s, ...
     decade_start = floor(yearID / 10) * 10,
     decade_label = paste0(decade_start, "s")
-  ) %>%
+  ) |>
   filter(!is.na(win_pct), is.finite(win_pct))
 
 ggplot(
