--- a/data.qmd
+++ b/data.qmd
@@ -5,7 +5,7 @@ To obtain year-end awards data, I downloaded a dataset from the Lahman Baseball 
 
 To obtain player statistics, the pybaseball library was used. This library scrape Baseball Reference, Baseball Savant, and Fangraphs, all reliable MLB statistics websites. The data of interest are aggregate statistics per player, per year. There are many columns of data. In my analyses, I selected several variables based on the significance and notoriety of a given statistic. I pulled statistics from 1911 and onward, since the first MVP was awarded in 1911. The first Cy Young was awarded in 1956. To note, I used this package instead of obtaining data from the source websites because many of these sites have limited access or ability to download significant datasets easily. However, I still cited the relevant source websites in the bibliography. For most years of data, I filtered for players who had at least 300 plate appearances and filtered for pitchers who had at least 40 qualified innings pitched. For years where there was a shortened season, I lowered the threshold for qualified appearances in accordance with the number of games played in that season. For example, the pandemic-shortened season of 2020 was only 60 games long for each team, so I lowered the thresholds to 80 plate appearances and 5 innings pitched.
 
-Data processing was done in Python (see GitHub repo for the Python files). The processing presented a challenge. There was not a common player identifier between the awards dataset and the player statistics dataset. I ended up using a finding a separate file that exists for translation between baseball statistics datasets. The WAR (Wins Above Replacement) leader flag is a calculated variable. It took quite a bit of processing to properly process and merge the flag into the dataset, mainly because requisite data points for aggregation lived in different datasets. Even with this processing, the dataset was not fully complete, so I manually adjusted records that remained incomplete.
+Data processing was done in Python (see GitHub repo for the Python files in the scripts folder). The processing presented a challenge. There was not a common player identifier between the awards dataset and the player statistics dataset. I ended up using a finding a separate file that exists for translation between baseball statistics datasets. The WAR (Wins Above Replacement) leader flag is a calculated variable. It took quite a bit of processing to properly process and merge the flag into the dataset, mainly because requisite data points for aggregation lived in different datasets. Even with this processing, the dataset was not fully complete, so I manually adjusted records that remained incomplete.
 
 Lastly, pitchers who won MVP were excluded from the MVP/WAR analysis. The batter dataset and pitcher datasets are separate and were not easy to combine, so I left them separate. I believe that excluding pitchers from that analysis is okay because pitchers rarely win MVP. Since 1956, there have only been 11 pitchers to win MVP, out of 138 total.
 
